# ctdb

./: .clang-format  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/ctdb/: ctdb.hpp  table.hpp
include/ctdb/indices/: full-text.hpp  indices.hpp
include/ctdb/indices/support/: ngram.hpp
include/ctdb/traits/: traits.hpp
include/ctdb/traits/storage/: sorted.hpp  unique-sorted.hpp  unique.hpp
support/cmake/: pedantic.cmake
tests/: CMakeLists.txt  table.cpp  test.cpp
tests/full-text/: generate-ngram.cpp  search-ngram.cpp  simple.cpp  view-as-ngram.cpp
